[VGS] add dataset

--- a/exercise/exercise_2.ipynb
+++ b/exercise/exercise_2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
     "import matplotlib.pyplot as plt\n",
     "from scipy.stats import shapiro, norm, probplot\n",
     "\n",
-    "df = pd.read_csv(\"/Users/samvardhan/Desktop/DataEngineer/Data_Explorers_Workshop/statistical_concepts_excercise/data/Retail_sales_dataset.csv\")\n",
+    "df = pd.read_csv(\"https://raw.githubusercontent.com/Data-Navigators/Statistical_Concept_Excercise/main/data/Retail_sales_dataset.csv\")\n",
     "\n",
     "sns.histplot(df['Total Amount'], kde=True)\n",
     "plt.title('Distribution of Total Amount')\n",
