--- a/exercise/exercise_1.ipynb
+++ b/exercise/exercise_1.ipynb
@@ -18,11 +18,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"/Users/samvardhan/Desktop/DataEngineer/Data_Explorers_Workshop/statistical_concepts_excercise/data/Retail_sales_dataset.csv\")"
+    "df = pd.read_csv(\"https://raw.githubusercontent.com/Data-Navigators/Statistical_Concept_Excercise/main/data/Retail_sales_dataset.csv\")"
    ]
   },
   {
