--- a/exercise/exercise_3.ipynb
+++ b/exercise/exercise_3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,7 @@
     "import numpy as np\n",
     "from scipy import stats\n",
     "\n",
-    "df = pd.read_csv(\"/Users/samvardhan/Desktop/DataEngineer/Data_Explorers_Workshop/statistical_concepts_excercise/data/Retail_sales_dataset.csv\")"
+    "df = pd.read_csv(\"https://raw.githubusercontent.com/Data-Navigators/Statistical_Concept_Excercise/main/data/Retail_sales_dataset.csv\")"
    ]
   },
   {
