[VGS] add other excercise

--- a/exercise/exercise_1.ipynb
+++ b/exercise/exercise_1.ipynb
@@ -253,13 +253,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Descriptive Statistics:\n",
       "              Age     Quantity  Price per Unit  Total Amount\n",
       "count  1000.00000  1000.000000     1000.000000   1000.000000\n",
       "mean     41.39200     2.514000      179.890000    456.000000\n",
@@ -268,7 +269,14 @@
       "25%      29.00000     1.000000       30.000000     60.000000\n",
       "50%      42.00000     3.000000       50.000000    135.000000\n",
       "75%      53.00000     4.000000      300.000000    900.000000\n",
-      "max      64.00000     4.000000      500.000000   2000.000000\n"
+      "max      64.00000     4.000000      500.000000   2000.000000\n",
+      "\n",
+      "Summary of Additional Statistics:\n",
+      "                   Mean  Median  Mode  Skewness  Kurtosis\n",
+      "Age              41.392    42.0  43.0 -0.048812 -1.201212\n",
+      "Quantity          2.514     3.0   4.0 -0.014036 -1.392867\n",
+      "Price per Unit  179.890    50.0  50.0  0.736308 -1.138996\n",
+      "Total Amount    456.000   135.0  50.0  1.376128  0.815031\n"
      ]
     }
    ],
@@ -280,7 +288,27 @@
     "\n",
     "numerical_cols = ['Age', 'Quantity', 'Price per Unit', 'Total Amount']\n",
     "desc_stats = df[numerical_cols].describe()\n",
-    "print(desc_stats)"
+    "\n",
+    "mean = desc_stats.loc['mean']\n",
+    "median = df[numerical_cols].median()\n",
+    "mode = df[numerical_cols].mode().iloc[0]  # Get the first mode\n",
+    "skewness = df[numerical_cols].skew()\n",
+    "kurtosis = df[numerical_cols].kurtosis()\n",
+    "\n",
+    "# Create a summary DataFrame for better visualization\n",
+    "summary_stats = pd.DataFrame({\n",
+    "    'Mean': mean,\n",
+    "    'Median': median,\n",
+    "    'Mode': mode,\n",
+    "    'Skewness': skewness,\n",
+    "    'Kurtosis': kurtosis\n",
+    "})\n",
+    "\n",
+    "print(\"Descriptive Statistics:\")\n",
+    "print(desc_stats)\n",
+    "\n",
+    "print(\"\\nSummary of Additional Statistics:\")\n",
+    "print(summary_stats)"
    ]
   },
   {
