--- a/exercise/exercise_3.ipynb
+++ b/exercise/exercise_3.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Hypothesis Testing"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,12 +24,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Hypothesis Testing: Difference in average Total Amount between male and female customers"
+    "## Hypothesis Testing: Difference in average Total Amount between male and female customers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -54,18 +61,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2. Chi-square test: Relationship between Gender and Product Category"
+    "## Chi-square test: Relationship between Gender and Product Category"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Techniques used for Hypothesis testing with categorical variables"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Contingency Table:\n",
+      "Product Category  Beauty  Clothing  Electronics\n",
+      "Gender                                         \n",
+      "Female               166       174          170\n",
+      "Male                 141       177          172\n",
+      "\n",
       "2. Chi-square Test: Relationship between Gender and Product Category\n",
       "Chi-square statistic: 1.673837085800602\n",
       "P-value: 0.43304287262068974\n",
@@ -78,8 +98,8 @@
    "source": [
     "contingency_table = pd.crosstab(df['Gender'], df['Product Category'])\n",
     "chi2, p_value, dof, expected = stats.chi2_contingency(contingency_table)\n",
-    "\n",
-    "print(\"2. Chi-square Test: Relationship between Gender and Product Category\")\n",
+    "print(f\"Contingency Table:\\n{contingency_table}\\n\")\n",
+    "print(\"Chi-square Test: Relationship between Gender and Product Category\")\n",
     "print(f\"Chi-square statistic: {chi2}\")\n",
     "print(f\"P-value: {p_value}\")\n",
     "print(f\"Degrees of freedom: {dof}\")\n",
@@ -91,14 +111,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3. T-test: Compare mean Age across two popular Product Categories"
+    "## T-test: Compare mean Age across two popular Product Categories"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3. T-test: Compare mean Age across two popular Product Categories\n",
+      "Comparing Clothing and Electronics\n",
+      "T-statistic: 0.20529739367317656\n",
+      "P-value: 0.837400242059152\n",
+      "Conclusion: Fail to reject the null hypothesis\n"
+     ]
+    }
+   ],
    "source": [
     "top_categories = df['Product Category'].value_counts().nlargest(2).index\n",
     "\n",
@@ -117,7 +149,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "data_explorer_env",
+   "display_name": "datasimulator",
    "language": "python",
    "name": "python3"
   },
@@ -131,7 +163,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.20"
+   "version": "3.11.1"
   }
  },
  "nbformat": 4,
